[package]
name = "solders-instruction"
version = "0.14.4"
edition = "2021"
include = ["/src"]
description = "Core types for the Solders project."
license = "MIT"
repository = "https://github.com/kevinheavey/solders"

[dependencies]
pyo3 = { workspace = true, features = ["macros"] }
solders-traits-core = { workspace = true }
solders-macros = { workspace = true }
solders-pubkey = { workspace = true }
solana-program = { workspace = true }
serde = { workspace = true }
derive_more = { workspace = true }
