[package]
name = "solders-instruction"
version = { workspace = true }
edition = { workspace = true }
include = ["/src"]
license = { workspace = true }
repository = { workspace = true }
description = "Solders instruction crate."

[dependencies]
pyo3 = { workspace = true, features = ["macros"] }
solders-traits-core = { workspace = true }
solders-macros = { workspace = true }
solders-pubkey = { workspace = true }
solana-program = { workspace = true }
serde = { workspace = true }
derive_more = { workspace = true }
