[package]
name = "solders-keypair"
version = { workspace = true }
edition = { workspace = true }
include = ["/src"]
license = { workspace = true }
repository = { workspace = true }
description = "Solders keypair crate."

[dependencies]
pyo3 = { workspace = true, features = ["macros"] }
solders-traits-core = { workspace = true }
solders-traits = { workspace = true }
solders-macros = { workspace = true }
solana-sdk = { workspace = true }
serde = { workspace = true }
derive_more = { workspace = true }
solders-pubkey = { workspace = true }
solders-signature = { workspace = true }
