
[package]
name = "solders-keypair"
version = { workspace = true }
edition = { workspace = true }
include = ["/src"]
license = { workspace = true }
repository = { workspace = true }
description = "Solders keypair crate."

[dependencies]
derive_more = { workspace = true }
five8 = { workspace = true }
pyo3 = { workspace = true, features = ["macros"] }
serde = { workspace = true }
solana-derivation-path = { workspace = true }
solana-keypair = { workspace = true, features = ["seed-derivable"] }
solana-presigner = { workspace = true }
solana-pubkey = { workspace = true }
solana-signature = { workspace = true }
solana-signer = { workspace = true }
solders-macros = { workspace = true }
solders-pubkey = { workspace = true }
solders-signature = { workspace = true }
solders-traits = { workspace = true }
solders-traits-core = { workspace = true }
