
[package]
name = "solders-litesvm"
version = { workspace = true }
edition = { workspace = true }
include = ["/src"]
license = { workspace = true }
repository = { workspace = true }
description = "Solders LiteSVM crate."

[dependencies]
pyo3 = { workspace = true, features = ["macros"] }
serde = { workspace = true }
litesvm.workspace = true
solana-sdk = { workspace = true }
solders-pubkey = { workspace = true }
