[package]
name = "solders-message"
version = { workspace = true }
edition = { workspace = true }
include = ["/src"]
license = { workspace = true }
repository = { workspace = true }

[dependencies]
pyo3 = { workspace = true, features = ["macros"] }
solders-traits-core = { workspace = true }
solders-traits = { workspace = true }
solders-macros = { workspace = true }
solana-program = { workspace = true }
serde = { workspace = true }
derive_more = { workspace = true }
solders-address-lookup-table-account = { workspace = true }
solders-pubkey = { workspace = true }
solders-hash = { workspace = true }
solders-instruction = { workspace = true }
bincode = { workspace = true }
