[package]
name = "solders-rpc-account-info-config"
version = { workspace = true }
edition = { workspace = true }
include = ["/src"]
license = { workspace = true }
repository = { workspace = true }
description = "Solders RPC account info crate."

[dependencies]
pyo3 = { workspace = true, features = ["macros"] }
serde = { workspace = true }
solders-macros = { workspace = true }
solders-traits-core = { workspace = true }
solders-account-decoder = { workspace = true }
solana-account-decoder = { workspace = true }
solders-rpc-config-macros = { workspace = true }
solana-rpc-client-api = { workspace = true }
solders-commitment-config = { workspace = true }
