
[package]
name = "solders-rpc-account-info-config"
version = { workspace = true }
edition = { workspace = true }
include = ["/src"]
license = { workspace = true }
repository = { workspace = true }
description = "Solders RPC account info crate."

[dependencies]
pyo3 = { workspace = true, features = ["macros"] }
serde = { workspace = true }
solana-account-decoder-client-types = { workspace = true }
solana-rpc-client-types = { workspace = true }
solders-account-decoder = { workspace = true }
solders-commitment-config = { workspace = true }
solders-macros = { workspace = true }
solders-rpc-config-macros = { workspace = true }
solders-traits-core = { workspace = true }
