[package]
name = "solders-rpc-common"
version = { workspace = true }
edition = { workspace = true }
include = ["/src"]
license = { workspace = true }
repository = { workspace = true }

[dependencies]
pyo3 = { workspace = true, features = ["macros"] }
serde = { workspace = true }
derive_more = { workspace = true }
solders-macros = { workspace = true }
solders-traits-core = { workspace = true }
solana-account-decoder = { workspace = true }
solana-rpc-client-api = { workspace = true }
solders-account = { workspace = true }
solders-rpc-response-data-boilerplate = { workspace = true }
solders-transaction-status = { workspace = true }
solana-transaction-status = { workspace = true }
solders-transaction-error = { workspace = true }
serde_with = { workspace = true }
