
[package]
name = "solders-rpc-common"
version = { workspace = true }
edition = { workspace = true }
include = ["/src"]
license = { workspace = true }
repository = { workspace = true }
description = "Solders RPC common crate."

[dependencies]
derive_more = { workspace = true }
pyo3 = { workspace = true, features = ["macros"] }
serde = { workspace = true }
serde_with = { workspace = true }
solana-account-decoder-client-types = { workspace = true }
solana-rpc-client-types = { workspace = true }
solana-transaction-error = { workspace = true }
solana-transaction-status-client-types = { workspace = true }
solders-account = { workspace = true }
solders-macros = { workspace = true }
solders-rpc-response-data-boilerplate = { workspace = true }
solders-rpc-responses-common = { workspace = true }
solders-traits-core = { workspace = true }
solders-transaction-error = { workspace = true }
solders-transaction-return-data = { workspace = true }
solders-transaction-status = { workspace = true }
