[package]
name = "solders-rpc-config-no-filter"
version = { workspace = true }
edition = { workspace = true }
include = ["/src"]
license = { workspace = true }
repository = { workspace = true }

[dependencies]
pyo3 = { workspace = true }
serde = { workspace = true }
solders-macros = { workspace = true }
solders-traits-core = { workspace = true }
solders-account-decoder = { workspace = true }
solana-account-decoder = { workspace = true }
solders-pubkey = { workspace = true }
solders-hash = { workspace = true }
solders-signature = { workspace = true }
solders-transaction-status-enums = { workspace = true }
solana-transaction-status = { workspace = true }
solana-rpc-client-api = { workspace = true }
solders-rpc-config-macros = { workspace = true }
solders-rpc-config-no-rpc-api = { workspace = true }
solders-commitment-config = { workspace = true }
solana-sdk = { workspace = true }
