
[package]
name = "solders-rpc-config-no-filter"
version = { workspace = true }
edition = { workspace = true }
include = ["/src"]
license = { workspace = true }
repository = { workspace = true }
description = "Solders RPC config-no-filter crate."

[dependencies]
pyo3 = { workspace = true, features = ["macros"] }
serde = { workspace = true }
solana-account-decoder-client-types = { workspace = true }
solana-rpc-client-types = { workspace = true }
solders-commitment-config = { workspace = true }
solders-macros = { workspace = true }
solders-pubkey = { workspace = true }
solders-rpc-config-macros = { workspace = true }
solders-rpc-config-no-rpc-api = { workspace = true }
solders-traits-core = { workspace = true }
solders-transaction-status-enums = { workspace = true }
