[package]
name = "solders-rpc-config-no-rpc-api"
version = "0.14.4"
edition = "2021"
include = ["/src"]
license = "MIT"
repository = "https://github.com/kevinheavey/solders"

[dependencies]
pyo3 = { workspace = true }
serde = { workspace = true }
solders-macros = { workspace = true }
solders-traits-core = { workspace = true }
solders-pubkey = { workspace = true }
