[package]
name = "solders-rpc-config-no-rpc-api"
version = { workspace = true }
edition = { workspace = true }
include = ["/src"]
license = { workspace = true }
repository = { workspace = true }

[dependencies]
pyo3 = { workspace = true }
serde = { workspace = true }
solders-macros = { workspace = true }
solders-traits-core = { workspace = true }
solders-pubkey = { workspace = true }
