[package]
name = "solders-rpc-config"
version = "0.14.4"
edition = "2021"
include = ["/src"]
license = "MIT"
repository = "https://github.com/kevinheavey/solders"

[dependencies]
pyo3 = { workspace = true }
solders-rpc-config-no-filter = { workspace = true }
solders-rpc-program-accounts-config = { workspace = true }
solders-rpc-account-info-config = { workspace = true }
