[package]
name = "solders-rpc-config"
version = { workspace = true }
edition = { workspace = true }
include = ["/src"]
license = { workspace = true }
repository = { workspace = true }

[dependencies]
pyo3 = { workspace = true }
solders-rpc-config-no-filter = { workspace = true }
solders-rpc-program-accounts-config = { workspace = true }
solders-rpc-account-info-config = { workspace = true }
solders-rpc-config-no-rpc-api = { workspace = true }
