
[package]
name = "solders-rpc-config"
version = { workspace = true }
edition = { workspace = true }
include = ["/src"]
license = { workspace = true }
repository = { workspace = true }
description = "Solders RPC config crate."

[dependencies]
pyo3 = { workspace = true, features = ["macros"] }
solders-rpc-config-no-filter = { workspace = true }
solders-rpc-program-accounts-config = { workspace = true }
solders-rpc-account-info-config = { workspace = true }
solders-rpc-request-airdrop-config = { workspace = true }
solders-rpc-send-transaction-config = { workspace = true }
solders-rpc-sig-status-config = { workspace = true }
solders-rpc-sigs-for-address-config = { workspace = true }
solders-rpc-sim-transaction-config = { workspace = true }
solders-rpc-simulate-tx-accounts-config = { workspace = true }
solders-rpc-config-no-rpc-api = { workspace = true }
