[package]
name = "solders-rpc-errors-no-tx-status"
version = { workspace = true }
edition = { workspace = true }
include = ["/src"]
license = { workspace = true }
repository = { workspace = true }
description = "Solders RPC errors-no-tx-status crate."

[dependencies]
pyo3 = { workspace = true, features = ["macros"] }
serde = { workspace = true }
derive_more = { workspace = true }
solders-macros = { workspace = true }
solders-traits-core = { workspace = true }
solders-transaction-error = { workspace = true }
solders-rpc-errors-common = { workspace = true }
